# blix-scraper

./: .env.example  .gitignore  AGENTS.md  README.md  mypy_errors.txt  pyproject.toml  pytest.ini  requirements.txt  roadmap.md
.github/workflows/: test.yml
.specify/memory/: constitution.md  testing-best-practices.md
docs/: _index.md  api-reference.md  architecture.md  ci-cd-implementation.md  developer-guide.md  domain-model.md  implementation-patterns.md  phase5-testing-best-practices-report.md  user-guide.md
examples/: 01_scrape_single_shop.py  02_scrape_multiple_shops.py  03_analyze_data.py  04_search_offers.py  05_export_csv.py  06_scheduled_scraping.py  07_search_products.py  08_debug_search.py  README.md
openspec/: config.yaml
openspec/changes/add-field-selection/: proposal.md
openspec/changes/add-field-selection/specs/cli-field-selection/: spec.md
openspec/changes/add-field-selection/specs/field-validation/: spec.md
openspec/changes/add-field-selection/specs/output-filtering/: spec.md
openspec/changes/add-save-data-flag/: tasks.md
openspec/changes/archive/2025-03-02-pure-data-refactor/: proposal.md  tasks.md
openspec/changes/archive/2025-03-02-pure-data-refactor/specs/cli/: spec.md
openspec/changes/archive/2025-03-02-pure-data-refactor/specs/service/: spec.md
openspec/changes/archive/2025-03-02-pure-data-refactor/specs/storage/: spec.md
openspec/changes/archive/2025-03-05-add-field-filtering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-05-add-field-filtering/specs/field-filtering/: spec.md
openspec/changes/archive/2026-02-27-date-filtering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-date-filtering/specs/domain/: spec.md
openspec/changes/archive/2026-02-28-critical-fixes/: proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-save-data-flag/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-save-data-flag/specs/data-export/: spec.md
openspec/changes/critical-fixes/: design.md  tasks.md
openspec/changes/date-filtering/: tasks.md
openspec/changes/date-filtering/specs/repository/: spec.md
openspec/changes/pure-data-refactor/: design.md  tasks.md
openspec/changes/pure-data-refactor/specs/orchestrator/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/data-export/: spec.md
openspec/specs/parsing/: spec.md
openspec/specs/service/: spec.md
openspec/specs/technical-debt/: spec.md
specs/002-improve-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-improve-testing/checklists/: requirements.md
specs/01-examples-docs-update/: plan.md  spec.md  tasks.md
specs/01-examples-docs-update/checklists/: requirements.md
src/: __init__.py  __main__.py  config.py  logging_config.py  orchestrator.py
src/cli/: __init__.py  __main__.py
src/domain/: date_filter.py  entities.py
src/scrapers/: __init__.py  base.py  keyword_scraper.py  leaflet_scraper.py  offer_scraper.py  search_scraper.py  shop_scraper.py
src/services/: __init__.py  date_filter.py  scraper_service.py
src/storage/: date_filtered_storage.py  field_filter.py  json_storage.py
src/utils/: __init__.py  data_export.py  date_parser.py  soup_helpers.py  url_helpers.py
src/webdriver/: __init__.py  driver_factory.py  helpers.py
tests/: README.md  conftest.py  test_config.py  test_logging_config.py
tests/cli/: __init__.py  test_cli.py  test_date_filtering.py
tests/domain/: test_date_filter.py  test_entities.py
tests/fixtures/html/: leaflet_page.html  offer_page.html  shops_page.html
tests/scrapers/: test_base.py  test_keyword_scraper.py  test_leaflet_scraper.py  test_offer_scraper.py  test_search_scraper.py  test_shop_scraper.py
tests/services/: test_date_filter.py  test_scraper_service.py
tests/storage/: test_date_filtered_storage.py  test_field_filter.py  test_json_storage.py
tests/utils/: capture_html.py  test_data_export.py  test_date_parser.py  test_soup_helpers.py  test_url_helpers.py
