[tool.poetry]
name = "blix-scraper"
version = "0.1.0"
description = "Web scraper for blix.pl promotional leaflets"
authors = ["Your Name <your.email@example.com>"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.4"
webdriver-manager = "^4.0.1"
selenium = "^4.15.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
typer = "^0.9.0"
rich = "^13.7.0"
python-dateutil = "^2.8.2"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
mypy = "^1.7.1"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blix-scraper"
version = "0.1.0"
description = "Web scraper for blix.pl promotional leaflets"
requires-python = ">=3.11"
dependencies = [
    "undetected-chromedriver>=3.5.4",
    "webdriver-manager>=4.0.1",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.7.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-python-dateutil>=2.9.0.20260124",
    "undetected-chromedriver>=3.5.5",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Allow untyped calls/defs for external libraries
allow_untyped_calls = true
allow_untyped_defs = true

# Ignore specific error codes that are hard to fix
disable_error_code = [
    "attr-defined",      # Pydantic BaseModel attribute issues
    "union-attr",        # Union type attribute access
    "var-annotated",     # Variable annotation issues
    "list-item",         # List invariance issues
    "dict-item",         # Dict iteration issues
    "return-value",      # Return type mismatches with libraries
    "arg-type",          # Argument type mismatches
    "index",             # Index type issues
]

# Per-file ignores for complex modules
[[tool.mypy.overrides]]
module = [
    "src.orchestrator",
    "src.cli",
    "src.webdriver.helpers",
]
ignore_errors = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
