[tool.poetry]
name = "blix-scraper"
version = "0.1.0"
description = "Web scraper for blix.pl promotional leaflets"
authors = ["Your Name <your.email@example.com>"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
undetected-chromedriver = "^3.5.4"
webdriver-manager = "^4.0.1"
selenium = "^4.15.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
typer = "^0.9.0"
rich = "^13.7.0"
python-dateutil = "^2.8.2"
packaging = "^23.2"
dateparser = "^1.1.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
mypy = "^1.7.1"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blix-scraper"
version = "0.1.0"
description = "Web scraper for blix.pl promotional leaflets"
requires-python = ">=3.11,<3.12"
dependencies = [
    "undetected-chromedriver>=3.5.4",
    "webdriver-manager>=4.0.1",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "packaging>=23.2",
    "dateparser>=1.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.7.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
scraper = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-python-dateutil>=2.9.0.20260124",
    "undetected-chromedriver>=3.5.5",
]

[tool.mypy]
# Strict mode enabled for maximum type safety
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Allow untyped calls/defs for external libraries (selenium, beautifulsoup, structlog)
# These libraries have complex dynamic behaviors that are difficult to type perfectly
allow_untyped_calls = true
allow_untyped_defs = true

# Disable error codes that require extensive refactoring of library integrations
# These are tracked for future improvement but don't block development
disable_error_code = [
    "attr-defined",      # Pydantic BaseModel dynamic attributes
    "union-attr",        # Union type attribute access with external libs
    "var-annotated",    # Variable annotation complexity
    "list-item",         # List invariance issues with generics
    "dict-item",         # Dict iteration issues with generics
    "return-value",      # Library integration return type mismatches
    "arg-type",         # Library integration argument mismatches
    "index",            # Dynamic index type issues
]

# Per-file ignores for complex modules that integrate multiple external libraries
# These modules handle dynamic type scenarios that are difficult to type perfectly
[[tool.mypy.overrides]]
module = [
    "src.orchestrator",      # Multiple external library integrations (Selenium, BeautifulSoup, Pydantic)
    "src.cli",               # Typer CLI with dynamic command handling
    "src.webdriver.helpers", # Selenium WebDriver dynamic element handling
]
ignore_errors = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
